Add basic store

--- a/store.html
+++ b/store.html
@@ -31,42 +31,31 @@
         </div>
     </div>
 </nav>
-<h1 class="title title-margin text-center">Welcome to Chenmeister's Concrete</h1>
 
-<!--<img class="center" src="assets/owner.jpg">-->
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-75 mx-auto" src="assets/owner.jpg" alt="First slide">
+<h1 class="title title-margin text-center">Store</h1>
+
+<div class="container-fluid padding">
+    <div class="row text-center">
+        <div class="col-6">
+            <h1>Classic Blocc</h1>
+            <img src="assets/block3.jpg">
         </div>
-        <div class="carousel-item">
-            <img class="d-block w-75 mx-auto" src="assets/block1.jpg" alt="Second slide">
+        <div class="col-6">
+            <h1>Smol Blocc</h1>
+            <img src="assets/block4.jpg">
         </div>
-        <div class="carousel-item">
-            <img class="d-block w-75 mx-auto" src="assets/block2.jpg" alt="Third slide">
+        <div class="col-6">
+            <h1>Thicc blocc</h1>
+            <img src="assets/block5.jpg">
+        </div>
+        <div class="col-6">
+            <h1>Loong blocc</h1>
+            <img src="assets/block6.jpeg">
         </div>
     </div>
-    <a class="carousel-control-prev w-50" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next w-50" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
-<h1 class="text-center subtitle subtitle-margin">About the owner</h1>
-<p class="lead text-wrap center" style="width: 75%"><b>
-    Nathan Chenmeister, the owner of Chenmeister Concrete, is 2' 4" and serving up the best concrete in short hills.
-    He can get a little angry around the customers sometimes, but he's so short it won't affect you in any way.
-</b></p>
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-</html>
